--- a/index.html
+++ b/index.html
@@ -370,8 +370,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/inspire (2).png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>App</p>
+                <h4>Inspire </h4>
+                <p>Front End</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/inspire (2).png" data-gall="portfolioGallery" class="venobox"
                     title="App 1"><i class="bx bx-plus"></i></a>
@@ -385,7 +385,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/bugger.home.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Full-Stack 3</h4>
+                <h4>Bug Log</h4>
                 <p>Full-Stack</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/bugger.hide.jpg" data-gall="portfolioGallery" class="venobox"
@@ -400,7 +400,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/keeper.noteDet.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Full-Stack 3</h4>
+                <h4>Keepr</h4>
                 <p>Full-Stack</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/keeper.noteDet.png" data-gall="portfolioGallery" class="venobox"
