--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -51,7 +51,7 @@
               <li><strong>Category</strong>: Full-Stack</li>
               <!-- <li><strong>Client</strong>: ASU Company</li> -->
               <li><strong>Project date</strong>: May, 2021</li>
-              <li><strong>Project URL</strong>: <a href="https://github.com/Melia88/bugger">www.github.com</a></li>
+              <li><strong>Project URL</strong>: <a href="https://bugger-m.herokuapp.com/#/">www.github.com</a></li>
             </ul>
             <p>This application gives users a platform for creating and monitoring bugs. Each bug haves a title,
               description, and the user who reported the bug. When a bug is closed it is timestamped with a closedDate
