Live site update

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -51,7 +51,7 @@
               <li><strong>Category</strong>: Web design</li>
               <!-- <li><strong>Client</strong>: ASU Company</li> -->
               <li><strong>Project date</strong>: April, 2021</li>
-              <li><strong>Project URL</strong>: <a href="https://melia88.github.io/checkpoint4/">www.github.com</a></li>
+              <li><strong>Project URL</strong>: <a href="https://melia88.github.io/checkpoint4/">Live-Site</a></li>
             </ul>
             <p> Inspiration can be difficult to achieve and this application was made to brings a feeling of peace with
               gorgeous backrounds from around the world, while offering subtle inspirational quotes. It also allows
