--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -52,7 +52,7 @@
               <!-- <li><strong>Client</strong>: ASU Company</li> -->
               <li><strong>Project date</strong>: June, 2021</li>
               <li><strong>Project URL</strong>: <a target="_blank"
-                  href="https://keeper-melia.herokuapp.com/">live-site</a></li>
+                  href="https://keeper-melia.herokuapp.com/">Live-Site</a></li>
             </ul>
             <p> Keepr is a social network that allows users to visually share, and discover new interests by posting
               images or videos to their own or others' collections (i.e. a collection of 'vaults,' usually with a common
