title tag updates

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                 <p>Front End</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/inspire (2).png" data-gall="portfolioGallery" class="venobox"
-                    title="App 1"><i class="bx bx-plus"></i></a>
+                    title="Inspire"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                     class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
@@ -389,7 +389,7 @@
                 <p>Full-Stack</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/bugger.hide.jpg" data-gall="portfolioGallery" class="venobox"
-                    title="Web 3"><i class="bx bx-plus"></i></a>
+                    title="Bugger"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details2.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                     class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
@@ -404,7 +404,7 @@
                 <p>Full-Stack</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/keeper.noteDet.png" data-gall="portfolioGallery" class="venobox"
-                    title="Web 3"><i class="bx bx-plus"></i></a>
+                    title="Keepr"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details3.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                     class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
